Fix default values for agents modules

--- a/public/components/common/welcome/welcome.less
+++ b/public/components/common/welcome/welcome.less
@@ -1,9 +1,9 @@
-.wz-welcome-page .euiCard .euiTitle  {
+.wz-welcome-page .euiCard .euiTitle, .wz-module-body .euiCard .euiTitle {
     font-size: 16px;
     font-weight: 400;
 }
 
-.wz-welcome-page .euiCard .euiText  {
+.wz-welcome-page .euiCard .euiText, .wz-module-body .euiCard .euiText {
     font-size: 12px;
     font-family: sans-serif;
 }
