agent info badge

--- a/public/components/common/modules/module.less
+++ b/public/components/common/modules/module.less
@@ -20,7 +20,7 @@
 }
 
 .wz-module-header-agent .euiHealth svg{
-    width: 24px;
+    width: 16px;
     height: 24px;
 }
 
@@ -40,11 +40,17 @@
     margin: 6px 12px!important;
 }
 
+.wz-module-header-agent-title-badge{
+    border: 1px solid #d3dae6;
+    padding: 0 100px;
+    border-radius: 100px;
+}
+
 .wz-module-header-agent-title-btn{
     cursor: pointer;
 }
 
-.wz-module-header-agent-title-btn h1 > span:hover{
+.wz-module-header-agent-title-btn > span:hover{
     color: #006BB4;
 }
 
