--- a/public/components/agents/fim/inventory/inventory.less
+++ b/public/components/agents/fim/inventory/inventory.less
@@ -74,7 +74,7 @@
 }
 
 .euiAccordion__childWrapper .flyout-row:not(.related-rules-row) .euiToolTipAnchor{
-    display: block!important;
+    //display: block!important;
 }
 
 .euiAccordion__button {
