All height in FIM details

--- a/public/components/agents/fim/inventory/inventory.less
+++ b/public/components/agents/fim/inventory/inventory.less
@@ -89,6 +89,10 @@
     height: 30px;
 }
 
+.module-discover-table .euiTableRow-isExpandedRow .euiTableCellContent{
+    animation: none!important;
+}
+
 /* This resets to the original value of "display" style for EuiTooltip used in ".euiAccordion__childWrapper .euiToolTipAnchor" definition,
     which is defined above in this same file as block!important.
 */
