--- a/public/components/common/welcome/welcome.less
+++ b/public/components/common/welcome/welcome.less
@@ -9,8 +9,8 @@
 }
 
 .wz-welcome-page-agent-info{
-    background: white;
-    padding: 6px 16px 8px 16px;
+/*     background: white;
+    padding: 6px 16px 8px 16px; */
 }
 
 .wz-welcome-page-agent-info.wz-welcome-page-agent-info-gray{
