--- a/public/components/common/modules/module.less
+++ b/public/components/common/modules/module.less
@@ -26,7 +26,7 @@
 
 .wz-module-header-nav{
 /*     min-height: 55px; */
-    margin: 0 16px;
+/*     margin: 0 16px; */
 }
 
 .wz-module-header-nav > .euiFlexGroup {
