Add loading to tehcnique details and fix technique margins

--- a/public/less/layout.less
+++ b/public/less/layout.less
@@ -223,6 +223,20 @@ html{
   width: 100%;
 }
 
+
+
+@media (min-width: 1400px) {
+  .wz-mitre-width {
+    width: 80%;
+  }
+}
+@media (max-width: 1399px) {
+  .wz-mitre-width {
+    width: 65%;
+  }
+}
+
+
 .wz-width-auto {
   width: auto;
 }
@@ -231,6 +245,12 @@ html{
 
 .wz-no-display {
   display: none !important;
+}
+
+.wz-display-inline-grid {
+  display: inline-grid;
+  display: -moz-inline-grid;
+  display: -ms-inline-grid;
 }
 
 .wazuh-column {
