Fix discover flick and FIM flyout columns error

--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1398,3 +1398,7 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom {
 .euiCodeBlock.euiCodeBlock-isFullScreen .euiCodeBlock__controls{
   padding-right: 16px;
 }
+
+.globalFilterGroup__wrapper{
+  max-height: 40px;
+}
