--- a/public/templates/visualize/dashboards.html
+++ b/public/templates/visualize/dashboards.html
@@ -26,8 +26,8 @@
                 <!-- End Discover search bar section -->
             </div>
 
-            <!-- Loading status section -->
-            <div ng-show="showModuleDashboard || showModuleEvents" ng-if="octrl.tab !== 'welcome' && octrl.tabView === 'panels' && !rendered && resultState !== 'none' || (resultState === 'loading' && octrl.tab !== 'welcome' && octrl.tabView === 'panels') "
+            <div ng-show="showModuleDashboard || showModuleEvents"
+                ng-if="octrl.tab !== 'welcome' && octrl.tabView === 'panels' && !rendered && resultState !== 'none' || (resultState === 'loading' && octrl.tab !== 'welcome' && octrl.tabView === 'panels') "
                 class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceAround euiFlexGroup--directionRow euiFlexGroup--responsive">
                 <div class="euiFlexItem euiFlexItem--flexGrowZero euiTextAlign euiTextAlign--center">
                     <div class="euiSpacer euiSpacer--m"></div>
@@ -87,9 +87,10 @@
                 </div>
             </div>
             <!-- End report status section -->
-            <div ng-if="octrl.tab && octrl.tab!=='welcome'" ng-show="octrl.tabView === 'panels' && (resultState === 'ready' || resultState === 'none')">
+            <div ng-if="octrl.tab && octrl.tab!=='welcome'"
+                ng-show="octrl.tabView === 'panels' && (resultState === 'ready' || resultState === 'none')">
                 <div ng-class="{'no-opacity': !moduleDiscoverReady}">
                     <react-component ng-show='showModuleDashboard' name="WzVisualize"
-                    props="getVisualizeProps(resultState)" />
+                        props="getVisualizeProps(resultState)" />
                 </div>
             </div>
