--- a/public/templates/agents-prev/agents-prev.html
+++ b/public/templates/agents-prev/agents-prev.html
@@ -52,7 +52,7 @@
             </div>
             <div flex class="layout-column md-padding">
                 <span class="wz-headline-title">
-                    <react-component name="EuiIcon" props="{type:'visHeatmap'}" ></react-component> Details
+                    <react-component name="EuiIcon" props="{type:'heatmap'}" ></react-component> Details
                 </span>
                 <md-divider class="wz-margin-top-10"></md-divider>
                 <div
